applications/docusaurus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docusaurus
  labels:
    goldilocks.fairwinds.com/enabled: "true"
