applications/docusaurus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docusaurus
  namespace: docusaurus
  labels:
    app: docusaurus
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: docusaurus
