applications/docusaurus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docusaurus
  namespace: docusaurus
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - docusaurus0213.kro.kr
    secretName: docusaurus-tls
  rules:
  - host: docusaurus0213.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docusaurus
            port:
              number: 80
